hero section completed

--- a/index.html
+++ b/index.html
@@ -5,8 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-1</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="font-inter">
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="./assets/logo-navbar.png" alt="">
+            </div>
+            <ul class="menu">
+                <li><a href="">Features</a></li>
+                <li><a href="">How It Works</a></li>
+                <li><a href="">Why It's Different</a></li>
+            </ul>
+            <div>
+                <button class="btn"><a href="">Get Early Access</a></button>
+            </div>
+        </nav>
+    </header>
+
+    <section class="hero-bg-img">
+        <div class="hero-text">
+            <button class="hero-btn-1"><a href="">Early Access Now Open</a></button>
+            <h1 class="hero-heading">Structured thinking,<br><span class="text-hero-green">not just note-taking.</span></h1>
+            <p>A private space to store notes, links, and learning summaries — designed to <br> help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+            <button class="btn"><a href="">Start Building Your Vault</a></button>
+            <button class="hero-last-button"><a href="">See How It Works</a></button>
+        </div>
+    </section>
     
 </body>
 </html>
