--- a/index.html
+++ b/index.html
@@ -35,6 +35,46 @@
             <button class="hero-last-button"><a href="">See How It Works</a></button>
         </div>
     </section>
+
+
+    <section>
+        <div class="text">
+          <h1>Notes don't fail, Structure does.</h1>
+          <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+        </div>
+        
+    </section>
+
+    <section class="all-item">
+        <div class="knowledge-box">
+            <div class="knowledge-card">
+                <img src="assets/Vector.png" alt="">
+                <h3>Scattered notes</h3>
+                <p>Your ideas live in 10 different apps, none of them connected.</p>
+            </div>
+            <div class="knowledge-card">
+                <img src="assets/Bookmarks.png" alt="">
+                <h3>Bookmark overload</h3>
+                <p>Hundreds of saved links you'll never revisit or remember.</p>
+            </div>
+            <div class="knowledge-card">
+                <img src="assets/Brain.png" alt="">
+                <h3>No idea connections</h3>
+                <p>Insights stay isolated, never building into bigger understanding.</p>
+            </div>
+            <div class="knowledge-card">
+                <img src="assets/Info.png" alt="">
+                <h3>Forgetting what you learned</h3>
+                <p>Knowledge fades because there's no system to retain it.</p>
+            </div>
+
+        </div>
+
+    </section>
+
+
+
+
     
 </body>
 </html>
