--- a/index.html
+++ b/index.html
@@ -73,6 +73,45 @@
     </section>
 
 
+    <section class="brain-2nd">
+        <div class="brain-text">
+            <div><img src="assets/knowledge.png" alt=""></div>
+            <div><p>The Solution</p>
+                <h1>Your second brain,<br>structured by design.</h1>
+                <p>Personal Knowledge Vault isn't another note-taking app. z <br>
+                    It's a thinking environment where every note, link, and summary <br>becomes part of an interconnected web of understanding.</p>
+            
+            </div>
+                <div>
+                    <img src="assets/CheckCircle.png" alt=""><span>Capture ideas with structure built-in from day one</span>
+                </div>
+                <div>
+                    <img src="assets/CheckCircle.png" alt=""><span>Connect related concepts automatically as you write</span>
+                </div>
+                <div>
+                    <img src="assets/CheckCircle.png" alt=""><span>Build lasting knowledge through reflection prompts</span>
+                </div>
+                <div>
+                    <img src="assets/CheckCircle.png" alt=""><span>Find anything instantly with semantic search</span>
+                </div>
+
+        </div>
+    </section>
+
+
+
+
+
+    <section>
+        <div class="last-text">
+            <div><h2>Ready to think more clearly?</h2></div>
+            <p>Join thousands of learners who are building their personal knowledge vaults. <br>Start free, no credit card required.</p>
+            <button class="btn"><a href="">Get Early Access</a></button>
+            <p>Free during early access • No credit card needed</p>
+        </div>
+    </section>
+
+
 
 
     
