barin section add

--- a/index.html
+++ b/index.html
@@ -75,31 +75,33 @@
     </section>
 
 
-    <section class="brain-2nd">
-        <div class="brain-text">
-            <div><img src="assets/knowledge.png" alt=""></div>
-            <div><p>The Solution</p>
-                <h1>Your second brain,<br>structured by design.</h1>
-                <p>Personal Knowledge Vault isn't another note-taking app. z <br>
-                    It's a thinking environment where every note, link, and summary <br>becomes part of an interconnected web of understanding.</p>
-            
+    <section>
+        <div class="brain">
+            <div>
+                <img src="assets/knowledge.png" alt="">
             </div>
-                <div>
-                    <img src="assets/CheckCircle.png" alt=""><span>Capture ideas with structure built-in from day one</span>
-                </div>
-                <div>
-                    <img src="assets/CheckCircle.png" alt=""><span>Connect related concepts automatically as you write</span>
-                </div>
-                <div>
-                    <img src="assets/CheckCircle.png" alt=""><span>Build lasting knowledge through reflection prompts</span>
-                </div>
-                <div>
-                    <img src="assets/CheckCircle.png" alt=""><span>Find anything instantly with semantic search</span>
+
+            <div class="barin-text">
+                <div class="brani-title"><p>The Solution</p></div>
+                <h2>Your second brain,<br>structured by design.</h2>
+                <p class="barin-text-2">
+                    Personal Knowledge Vault isn't another note-taking app. z <br>It's a thinking environment where every note, link, and summary <br>becomes part of an interconnected web of understanding.
+                </p>
+                <div class="mark">
+                    <img src="assets/CheckCircle.png" alt="">
+                <span>Capture ideas with structure built-in from day one</span> <br>
+                <img src="assets/CheckCircle.png" alt="">
+                <span>Connect related concepts automatically as you write</span> <br>
+                <img src="assets/CheckCircle.png" alt="">
+                <span>Build lasting knowledge through reflection prompts</span> <br>
+                <img src="assets/CheckCircle.png" alt="">
+                <span>Find anything instantly with semantic search</span>
+
                 </div>
 
+            </div>
         </div>
     </section>
-
 
 
 
