--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
                 <li><a href="">Why It's Different</a></li>
             </ul>
             <div>
-                <button class="btn"><a href="">Get Early Access</a> <i class="fa-solid fa-arrow-right"></i></button>
+                <button class="btn">Get Early Access</button>
             </div>
         </nav>
     </header>
 
     <section class="hero-bg-img">
         <div class="hero-text">
-            <button class="hero-btn-1"><i class="fa-regular fa-circle-dot"></i><a href="">Early Access Now Open</a></button>
+            <button class="hero-btn-1"><i class="fa-regular fa-circle-dot"></i>Early Access Now Open</button>
             <h1 class="hero-heading">Structured thinking,<br><span class="text-hero-green">not just note-taking.</span></h1>
             <p>A private space to store notes, links, and learning summaries — designed to <br> help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
-            <button class="btn"><a href="">Start Building Your Vault</a> <i class="fa-solid fa-arrow-right"></i></button>
-            <button class="hero-last-button"><i class="fa-light fa-play"></i><a href="">See How It Works</a></button>
+            <button class="btn">Start Building Your Vault <i class="fa-solid fa-arrow-right"></i></button>
+            <button class="hero-last-button"><i class="fa-solid fa-play"></i> See How It Works</button>
         </div>
     </section>
 
@@ -110,7 +110,7 @@
         <div class="last-text">
             <div><h2>Ready to think more clearly?</h2></div>
             <p>Join thousands of learners who are building their personal knowledge vaults. <br>Start free, no credit card required.</p>
-            <button class="btn"><a href="">Get Early Access</a> <i class="fa-solid fa-arrow-right"></i></button>
+            <button class="btn">Get Early Access <i class="fa-solid fa-arrow-right"></i></button>
             <p>Free during early access • No credit card needed</p>
         </div>
     </section>
